# log_aggregator

./: CMakeLists.txt  main.cpp
client/: CMakeLists.txt  main.cpp
include/: ConnectionProcessor.hpp
server/: CMakeLists.txt  main.cpp
